--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
 </head>
 <body fullbleed unresolved>
     <countdown-timer></countdown-timer>
+
+    <countdown-timer minutes="11"></countdown-timer>
+
+    <countdown-timer minutes="1" seconds="30"></countdown-timer>
+
+    <countdown-timer minutes="33" seconds="33"></countdown-timer>
 </body>
 </html>
