--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body fullbleed unresolved>
     <countdown-timer></countdown-timer>
 
-    <countdown-timer minutes="11"></countdown-timer>
+    <!-- <countdown-timer minutes="11"></countdown-timer>
 
     <countdown-timer minutes="1" seconds="30"></countdown-timer>
 
-    <countdown-timer minutes="33" seconds="33"></countdown-timer>
+    <countdown-timer minutes="33" seconds="33"></countdown-timer> -->
 </body>
 </html>
