Changing email address and adding proper description for manifest file

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
 </head>
 <body fullbleed unresolved>
-    <countdown-timer></countdown-timer>
+    <countdown-timer minutes="55"></countdown-timer>
 
     <!-- <countdown-timer minutes="11"></countdown-timer>
 
