--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body fullbleed unresolved>
     <countdown-timer minutes="55"></countdown-timer>
-
+    <countdown-timer minutes="50"></countdown-timer>
     <!-- <countdown-timer minutes="11"></countdown-timer>
 
     <countdown-timer minutes="1" seconds="30"></countdown-timer>
