Adding README and reordering dependencies

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Countdown Timer</title>
-  <link href="elements/timer.html" rel="import">
-  <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js"></script>
+  <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js" async></script>
+  <link href="elements/timer.html" rel="import" async>
 </head>
 <body fullbleed unresolved>
     <countdown-timer minutes="55" seconds="30"></countdown-timer>
