--- a/elements/timer.html
+++ b/elements/timer.html
@@ -2,9 +2,9 @@
   <link href="bower_components/polymer/polymer.html" rel="import">
   <link href="bower_components/paper-item/paper-item.html" rel="import">
   <link href="bower_components/paper-button/paper-button.html" rel="import">
-  <link href="../bower_components/paper-icon-button/paper-icon-button.html" rel="import">
-  <link href="../bower_components/iron-icons/iron-icons.html"  rel="import">
-  <link href="../bower_components/iron-icons/av-icons.html" rel="import">
+  <link href="bower_components/paper-icon-button/paper-icon-button.html" rel="import">
+  <link href="bower_components/iron-icons/iron-icons.html"  rel="import">
+  <link href="bower_components/iron-icons/av-icons.html" rel="import">
   <style>
     :host {
       display: block;
