--- a/index.html
+++ b/index.html
@@ -6,8 +6,16 @@
   <title>Countdown Timer</title>
   <script src="bower_components/webcomponentsjs/webcomponents-lite.min.js" async></script>
   <link href="elements/timer.html" rel="import" async>
+  <style>
+    body { text-align: center;}
+  </style>
 </head>
 <body fullbleed unresolved>
+  <h1>Countdown Timer</h1>
+  <p>Easy to use custom element built in polymer to create a countdown timer.<br>
+    Confirms time past by comparing timestamps and not interval alone.</p>
+    <p>Fork it on <a href="https://github.com/Boo-urns/polymer-countdown-timer">Github</a>.</p>
+
     <countdown-timer minutes="55" seconds="30"></countdown-timer>
     <countdown-timer minutes="50"></countdown-timer>
 
