--- a/elements/timer.html
+++ b/elements/timer.html
@@ -3,8 +3,8 @@
   <link href="../bower_components/paper-item/paper-item.html" rel="import">
   <link href="../bower_components/paper-button/paper-button.html" rel="import">
   <link href="../bower_components/paper-icon-button/paper-icon-button.html" rel="import">
-  <link href="../bower_components/iron-icons/iron-icons.html"  rel="import">
-  <link href="../bower_components/iron-icons/av-icons.html" rel="import">
+  <link href="../bower_components/iron-icon/iron-icon.html"  rel="import">
+  <link href="../elements/custom-icons.html" rel="import">
   <style>
     :host {
       display: block;
@@ -19,8 +19,8 @@
     <paper-item>
       <h2><span>{{timer.min}}</span>:<span>{{timer.seconds}}</h2>
       <div class="buttons">
-        <paper-icon-button icon="av:play-arrow" id="start"></paper-icon-button>
-        <paper-icon-button icon="av:pause" id="stop"></paper-icon-button>
+        <paper-icon-button icon="custom-icons:play-arrow" id="start"></paper-icon-button>
+        <paper-icon-button icon="custom-icons:pause" id="stop"></paper-icon-button>
       </div>
     </paper-item>
 
